<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAffects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/ui_txt_hours"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextViewMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ui_txt_minutes"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/TextViewSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ui_txt_seconds"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <NumberPicker
                android:id="@+id/numberPickerHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <NumberPicker
                android:id="@+id/numberPickerPre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <NumberPicker
                android:id="@+id/numberPickerPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonInvisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_btn_ok" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ui_btn_cancel" />

        </TableRow>

    </TableLayout>

</RelativeLayout>